--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
     .stroke {
         text-shadow: -2px -2px 1px #000, 2px 2px 1px #000, -2px 2px 1px #000, 2px -2px 1px #000;
     }
+
+    .fondo {
+
+        background-color: rgba(0, 0, 0, 0.3);
+        /* Negro con 50% de opacidad */
+
+    }
 </style>
 
 <body class="montserratFont">
@@ -342,8 +349,9 @@
         </div>
 
 
-        <div class="row">
+        <div class="row fondo">
             <div class="col-12">
+                <br>
                 <h1 class="stroke text-light text-center candal-regular"> Recursos Humanos</h1>
                 <br>
                 <br>
@@ -354,11 +362,28 @@
                 <img src="img/julieta.jpg" width="300px" height="300px" class="rounded-circle"
                     alt="Julieta Esparza Jiménez">
                 <h2 class="candal-regular stroke text-light">Julieta Esparza Jiménez</h2>
+                <p class="card-text text-light stroke">Lic. en Educación Especial Área de Atención Motriz de la Escuela
+                    Normal
+                    de
+                    Ecatepec (ENE), Maestría en Educación por la Universidad Tecnológica de México (UNITEC). Cinco años
+                    de servicio en educación básica en el Gobierno del Estado de México, en funciones de docente de
+                    aprendizaje en la Unidad de Servicios de Apoyo a la Educación Regular (USAER) a nivel primaria y
+                    preescolar. Diplomado en Competencias Docentes para la Alfabetización Digital.</p>
+                <br>
             </div>
             <div class="col-md-6 text-center">
                 <img src="img/deyci.jpg" width="300px" height="300px" class=" rounded-circle"
                     alt="Deicy Lozano Santiago">
                 <h2 class="candal-regular stroke text-light">Deicy Lozano Santiago</h2>
+                <p class="card-text text-light stroke">Lic. en educación secundaria, con especialidad en Biología,
+                    Normal
+                    Superior del
+                    Estado de Hidalgo, Maestría en educación y valores, Instituto Tecnológico de Educación Superior
+                    (ITES). Diecinueve años de servicio en educación básica en el Nivel de Telesecundarias en el estado
+                    de Hidalgo, trece años con funciones docentes y seis años con función directiva. Diplomado de vida
+                    saludable. Apoyo técnico en la supervisión escolar de la Zona 25 de Telesecundarias, Cardonal
+                    Hgo.<br>
+                </p>
             </div>
         </div>
 
