ajuste tablas y fondo de rh

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     .fondo {
 
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.7);
         /* Negro con 50% de opacidad */
 
     }
@@ -433,16 +433,271 @@
                 <div class="modal-body text-center">
                     <h2 class="stroke text-light candal-regular">Módulo I: Metodología de enseñanza</h2>
                     <br><br>
-                    <img class="img-fluid" src="img/1.png" />
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="table-primary">
+
+                                <th colspan="2">
+                                    <h2><strong>Diplomado en Estrategias Didácticas Para El Proceso de Enseñanza-
+                                            Aprendizaje.</strong>
+                                    </h2>
+                                </th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h2><strong>Módulo 1:</strong></h2> Metodologías de enseñanza
+                                </td>
+                                <td>
+                                    <h2><strong>Duración:</strong></h2> 30 horas
+                                </td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td colspan="2">
+                                    <h2><strong> Objetivo Específico: </strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Los participantes reconocerán las diferentes estrategias de las
+                                    metodologías didácticas de la Nueva Escuela Mexicana, para aplicarla con los
+                                    estudiantes favoreciendo el proceso de enseñanza - aprendizaje.</td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td>
+                                    <h2><strong> Objetivos Operativos: </strong></h2>
+                                </td>
+                                <td>
+                                    <h2><strong>Contenido:</strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li>Los participantes conocerán los distintos aprendizajes aplicando diversas
+                                            herramientas.</li>
+                                        <li>Los participantes desarrollarán proyectos, para aplicarlos en el aula.
+                                        </li>
+                                    </ul>
+                                </td>
+                                <td>
+
+                                    1. Aprendizaje basado en proyectos comunitarios<br>
+                                    2. Aprendizaje basado en indagación (STEAM como enfoque)<br>
+                                    3. Aprendizaje Basado en Problemas (ABP)<br>
+                                    4. Aprendizaje Servicio (AS)<br>
+
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
                     <br><br>
                     <h2 class="stroke text-light candal-regular">Módulo II Dispositivos básicos del aprendizaje</h2>
-                    <img class="img-fluid" src="img/2.png" />
+                    <br><br>
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="table-primary">
+
+                                <th colspan="2">
+                                    <h2><strong>Diplomado en Estrategias Didácticas Para El Proceso de Enseñanza-
+                                            Aprendizaje.</strong>
+                                    </h2>
+                                </th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h2><strong>Módulo 2:</strong></h2> Dispositivos básicos del aprendizaje y su
+                                    aplicación en el aula
+                                </td>
+                                <td>
+                                    <h2><strong>Duración:</strong></h2> 30 horas
+                                </td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td colspan="2">
+                                    <h2><strong> Objetivo Específico: </strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Los participantes serán capaces de identificar los dispositivos básicos
+                                    de aprendizaje con la intención de aplicar estrategias didácticas en su práctica
+                                    docente de forma habitual.</td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td>
+                                    <h2><strong> Objetivos Operativos: </strong></h2>
+                                </td>
+                                <td>
+                                    <h2><strong>Contenido:</strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li>Los alumnos relacionarán las actividades que favorezcan el desarrollo de los
+                                            dispositivos básicos de aprendizaje para poder aplicarlas de manera
+                                            consciente en su labor docente.</li>
+                                        <li>Los estudiantes reconocerán la importancia de tomar en cuenta los
+                                            dispositivos básicos de aprendizaje como factor determinante para la
+                                            adquisición de conocimientos</li>
+                                    </ul>
+                                </td>
+                                <td>
+
+                                    1.Definición de los dispositivos básicos de aprendizaje<br>
+                                    2.Memoria<br>
+                                    3.Atención<br>
+                                    4.Percepción<br>
+                                    5.Motivación<br>
+                                    6.Habituación
+
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
                     <br><br>
                     <h2 class="stroke text-light candal-regular">Módulo III Herramientas tecnológicas</h2>
-                    <img class="img-fluid" src="img/3.png" />
+                    <br><br>
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="table-primary">
+
+                                <th colspan="2">
+                                    <h2><strong>Diplomado en Estrategias Didácticas Para El Proceso de Enseñanza-
+                                            Aprendizaje.</strong>
+                                    </h2>
+                                </th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h2><strong>Módulo 3:</strong></h2> Herramientas tecnológicas
+                                </td>
+                                <td>
+                                    <h2><strong>Duración:</strong></h2> 30 horas
+                                </td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td colspan="2">
+                                    <h2><strong> Objetivo Específico: </strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Los participantes conocerán y aplicarán diversas herramientas
+                                    tecnológicas, con la intención de adquirir nuevos conocimientos y aplicarlos en el
+                                    aula.</td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td>
+                                    <h2><strong> Objetivos Operativos: </strong></h2>
+                                </td>
+                                <td>
+                                    <h2><strong>Contenido:</strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li>1.Los docentes identificarán las distintas herramientas tecnológicas como
+                                            apoyo en su labor docente.</li>
+                                        <li>2.Los participantes adquirieron habilidades digitales para poder diseñar
+                                            estrategias y poder aplicar en sus proyectos académicos de aula.</li>
+                                    </ul>
+                                </td>
+                                <td>
+
+                                    1.¿Qué son las herramientas tecnológicas?<br>
+                                    2.Kahoot<br>
+                                    3.Padlet<br>
+                                    4.Canva<br>
+                                    5.Genially<br>
+                                    6.PowToon
+
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+
                     <br><br>
                     <h2 class="stroke text-light candal-regular">Módulo IV Diseño de instrumentos de evaluación.</h2>
-                    <img class="img-fluid" src="img/4.png" />
+                    <br><br>
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="table-primary">
+
+                                <th colspan="2">
+                                    <h2><strong>Diplomado en Estrategias Didácticas Para El Proceso de Enseñanza-
+                                            Aprendizaje.</strong>
+                                    </h2>
+                                </th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h2><strong>Módulo 4:</strong></h2> Herramientas tecnológicasDiseño de instrumentos
+                                    de evaluación.
+                                </td>
+                                <td>
+                                    <h2><strong>Duración:</strong></h2> 30 horas
+                                </td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td colspan="2">
+                                    <h2><strong> Objetivo Específico: </strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">Los estudiantes identificaran instrumentos de evaluación con su
+                                    respectiva técnica a través de la perspectiva de evaluación formativa</td>
+                            </tr>
+                            <tr class="table-primary">
+                                <td>
+                                    <h2><strong> Objetivos Operativos: </strong></h2>
+                                </td>
+                                <td>
+                                    <h2><strong>Contenido:</strong></h2>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li>Los alumnos clasificarán las técnicas y los instrumentos de evaluación
+                                            correspondientes.</li>
+                                        <li>Los estudiantes conocerán las características principales de los
+                                            instrumentos para monitorear el avance de los aprendizajes.</li>
+                                        <li>Los estudiantes diseñarán instrumentos de evaluación para fortalecer su
+                                            práctica educativa.</li>
+                                    </ul>
+                                </td>
+                                <td>
+
+                                    1.Evaluación formativa<br>
+                                    2.Técnicas de observación<br>
+                                    3.Técnicas de desempeño<br>
+                                    4.Técnicas para análisis de desempeño<br>
+                                    5.Técnicas de interrogatorio<br>
+                                    6.Normas generales para la evaluación del aprendizaje, acreditación, promoción,
+                                    regularización y certificación de las alumnas y los alumnos de educación preescolar,
+                                    primaria y secundaria.
+
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+
+
                     <br><br>
                 </div>
                 <div class="modal-footer">
