ajuste del titulo del modulo 4

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h2><strong>Módulo 4:</strong></h2> Herramientas tecnológicasDiseño de instrumentos
+                                    <h2><strong>Módulo 4:</strong></h2> Diseño de instrumentos
                                     de evaluación.
                                 </td>
                                 <td>
