ajuste en nombres

--- a/index.html
+++ b/index.html
@@ -361,12 +361,11 @@
             <div class="col-md-6 text-center">
                 <img src="img/julieta.jpg" width="300px" height="300px" class="rounded-circle"
                     alt="Julieta Esparza Jiménez">
-                <h2 class="candal-regular stroke text-light">Julieta Esparza Jiménez</h2>
+                <h2 class="candal-regular stroke text-light">Mtra. Julieta Esparza Jiménez</h2>
                 <p class="card-text text-light stroke">Lic. en Educación Especial Área de Atención Motriz de la Escuela
-                    Normal
-                    de
-                    Ecatepec (ENE), Maestría en Educación por la Universidad Tecnológica de México (UNITEC). Cinco años
-                    de servicio en educación básica en el Gobierno del Estado de México, en funciones de docente de
+                    Normal de Ecatepec (ENE), Maestría en Educación por la Universidad Tecnológica de México (UNITEC).
+                    Cinco años de servicio en educación básica en el Gobierno del Estado de México, en funciones de
+                    docente de
                     aprendizaje en la Unidad de Servicios de Apoyo a la Educación Regular (USAER) a nivel primaria y
                     preescolar. Diplomado en Competencias Docentes para la Alfabetización Digital.</p>
                 <br>
@@ -374,7 +373,7 @@
             <div class="col-md-6 text-center">
                 <img src="img/deyci.jpg" width="300px" height="300px" class=" rounded-circle"
                     alt="Deicy Lozano Santiago">
-                <h2 class="candal-regular stroke text-light">Deicy Lozano Santiago</h2>
+                <h2 class="candal-regular stroke text-light">Mtra. Deicy Lozano Santiago</h2>
                 <p class="card-text text-light stroke">Lic. en educación secundaria, con especialidad en Biología,
                     Normal
                     Superior del
